Add general-entity yang to common
Change-Id: Iebf021d92a475174ceadb76895b5553b37df06ed
Signed-off-by: Tom Pantelis <tpanteli@brocade.com>

--- a/common/features/pom.xml
+++ b/common/features/pom.xml
@@ -121,5 +121,9 @@
                 <groupId>${project.groupId}.model</groupId>
                 <artifactId>yang-ext</artifactId>
             </dependency>
+            <dependency>
+                <groupId>${project.groupId}.model</groupId>
+                <artifactId>general-entity</artifactId>
+            </dependency>
     </dependencies>
 </project>
