--- a/binding/mdsal-binding-api/pom.xml
+++ b/binding/mdsal-binding-api/pom.xml
@@ -20,6 +20,10 @@
       <artifactId>mdsal-common-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.mdsal.model</groupId>
+      <artifactId>general-entity</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>concepts</artifactId>
     </dependency>
