--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -120,7 +120,11 @@
                 <artifactId>yang-ext</artifactId>
                 <version>2013.09.07.8-SNAPSHOT</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.opendaylight.mdsal.model</groupId>
+                <artifactId>general-entity</artifactId>
+                <version>0.8.0-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-binding-test-model</artifactId>
