--- a/model/pom.xml
+++ b/model/pom.xml
@@ -34,6 +34,7 @@
         <module>iana</module>
         <module>ietf</module>
         <module>l2-types</module>
+        <module>general-entity</module>
     </modules>
 
     <dependencyManagement>
