Add general-entity yang to common
Change-Id: Iebf021d92a475174ceadb76895b5553b37df06ed
Signed-off-by: Tom Pantelis <tpanteli@brocade.com>

--- a/common/mdsal-common-api/pom.xml
+++ b/common/mdsal-common-api/pom.xml
@@ -25,6 +25,10 @@
       <artifactId>util</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.mdsal</groupId>
+      <artifactId>yang-binding</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>yang-common</artifactId>
     </dependency>
@@ -34,6 +38,15 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.opendaylight.yangtools</groupId>
+        <artifactId>yang-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
   <scm>
     <connection>scm:git:http://git.opendaylight.org/gerrit/mdsal.git</connection>
