--- a/model/artifacts/pom.xml
+++ b/model/artifacts/pom.xml
@@ -110,8 +110,13 @@
                 <artifactId>ietf-inet-types-2013-07-15</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
-
-
+            <dependency>
+                <groupId>org.opendaylight.mdsal.model</groupId>
+                <artifactId>features-mdsal-model</artifactId>
+                <classifier>features</classifier>
+                <version>0.8.0-SNAPSHOT</version>
+                <type>xml</type>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
