--- a/model/artifacts/pom.xml
+++ b/model/artifacts/pom.xml
@@ -117,6 +117,12 @@
                 <version>0.8.0-SNAPSHOT</version>
                 <type>xml</type>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.mdsal.model</groupId>
+                <artifactId>general-entity</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <!-- TODO: Sort dependencies alphabetically? -->
         </dependencies>
     </dependencyManagement>
 </project>
