BUG 4869: Remove lmax version declaration
 - use odl-lmax feature

Signed-off-by: Tony Tkacik <ttkacik@cisco.com>
Change-Id: I8ce55c70c218441f0186f6089d2d4de51f5919e8

--- a/common/features/pom.xml
+++ b/common/features/pom.xml
@@ -47,6 +47,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.opendaylight.odlparent</groupId>
+            <artifactId>features-odlparent</artifactId>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+
+        <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>features-yangtools</artifactId>
             <classifier>features</classifier>
