--- a/common/parent/pom.xml
+++ b/common/parent/pom.xml
@@ -34,6 +34,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                 <groupId>org.opendaylight.odlparent</groupId>
+                 <artifactId>odlparent-artifacts</artifactId>
+                 <version>1.7.0-SNAPSHOT</version>
+                 <type>pom</type>
+                 <scope>import</scope>
+            </dependency>
+            <dependency>
                  <groupId>org.opendaylight.mdsal</groupId>
                  <artifactId>mdsal-artifacts</artifactId>
                  <version>2.1.0-SNAPSHOT</version>
