--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -28,4 +28,21 @@
         <module>mdsal-dom-broker</module>
         <module>mdsal-dom-inmemory-datastore</module>
     </modules>
+
+  <!--
+      Maven Site Configuration
+
+      The following configuration is necessary for maven-site-plugin to
+      correctly identify the correct deployment path for OpenDaylight Maven
+      sites.
+  -->
+  <url>${odl.site.url}/${project.groupId}/${stream}/${project.artifactId}/</url>
+
+  <distributionManagement>
+    <site>
+      <id>opendaylight-site</id>
+      <url>${nexus.site.url}/${project.artifactId}/</url>
+    </site>
+  </distributionManagement>
+
 </project>
