--- a/model/ietf/ietf-yang-types-20130715/pom.xml
+++ b/model/ietf/ietf-yang-types-20130715/pom.xml
@@ -23,6 +23,12 @@
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>ietf-type-util</artifactId>
+        </dependency>
+    </dependencies>
 
   <!--
       Maven Site Configuration
