--- a/model/artifacts/pom.xml
+++ b/model/artifacts/pom.xml
@@ -122,6 +122,11 @@
                 <artifactId>general-entity</artifactId>
                 <version>0.9.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.mdsal.model</groupId>
+                <artifactId>ietf-type-util</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
             <!-- TODO: Sort dependencies alphabetically? -->
         </dependencies>
     </dependencyManagement>
