--- a/model/features/pom.xml
+++ b/model/features/pom.xml
@@ -123,6 +123,10 @@
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-inet-types-2013-07-15</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>ietf-type-util</artifactId>
+        </dependency>
     </dependencies>
 
   <!--
