BUG-2825: add utility methods for instantiating DTOs
Change-Id: I9a98c55b850bf13695c8f581f8acee81705d570b
Signed-off-by: Robert Varga <robert.varga@pantheon.sk>
(cherry picked from commit 4ba08793b4fe9fbc958270de742241e5f093d1b4)

--- a/model/artifacts/pom.xml
+++ b/model/artifacts/pom.xml
@@ -122,6 +122,11 @@
                 <artifactId>general-entity</artifactId>
                 <version>0.8.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.mdsal.model</groupId>
+                <artifactId>ietf-type-util</artifactId>
+                <version>0.8.1-SNAPSHOT</version>
+            </dependency>
             <!-- TODO: Sort dependencies alphabetically? -->
         </dependencies>
     </dependencyManagement>
