--- a/binding/mdsal-binding-dom-adapter/pom.xml
+++ b/binding/mdsal-binding-dom-adapter/pom.xml
@@ -4,10 +4,10 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>mdsal-binding</artifactId>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.8.0-Beryllium</version>
   </parent>
   <artifactId>mdsal-binding-dom-adapter</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-Beryllium</version>
   <packaging>bundle</packaging>
 
   <dependencies>
