--- a/common/features/pom.xml
+++ b/common/features/pom.xml
@@ -12,17 +12,17 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>features-parent</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0-Beryllium</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>features-mdsal</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-Beryllium</version>
     <packaging>jar</packaging>
 
     <properties>
-        <yangtools.version>0.8.0-SNAPSHOT</yangtools.version>
+        <yangtools.version>0.8.0-Beryllium</yangtools.version>
     </properties>
 
     <dependencyManagement>
