--- a/common/parent/pom.xml
+++ b/common/parent/pom.xml
@@ -13,18 +13,18 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>odlparent</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.6.0-Beryllium</version>
         <relativePath></relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mdsal-parent</artifactId>
     <groupId>org.opendaylight.mdsal</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-Beryllium</version>
     <packaging>pom</packaging>
 
     <properties>
-        <yangtools.version>0.8.0-SNAPSHOT</yangtools.version>
+        <yangtools.version>0.8.0-Beryllium</yangtools.version>
         <salGeneratorPath>target/generated-sources/sal</salGeneratorPath>
 
         <!-- FIXME: these will be upstreamed -->
@@ -36,14 +36,14 @@
             <dependency>
                  <groupId>org.opendaylight.mdsal</groupId>
                  <artifactId>mdsal-artifacts</artifactId>
-                 <version>2.0.0-SNAPSHOT</version>
+                 <version>2.0.0-Beryllium</version>
                  <type>pom</type>
                  <scope>import</scope>
             </dependency>
             <dependency>
                  <groupId>org.opendaylight.yangtools</groupId>
                  <artifactId>yangtools-artifacts</artifactId>
-                 <version>0.8.0-SNAPSHOT</version>
+                 <version>0.8.0-Beryllium</version>
                  <type>pom</type>
                  <scope>import</scope>
             </dependency>
@@ -250,7 +250,7 @@
                 <plugin>
                     <groupId>org.opendaylight.yangtools</groupId>
                     <artifactId>yang-maven-plugin</artifactId>
-                    <version>0.8.0-SNAPSHOT</version>
+                    <version>0.8.0-Beryllium</version>
                     <executions>
                         <execution>
                             <goals>
@@ -284,7 +284,7 @@
                         <dependency>
                             <groupId>org.opendaylight.mdsal</groupId>
                             <artifactId>maven-sal-api-gen-plugin</artifactId>
-                            <version>0.8.0-SNAPSHOT</version>
+                            <version>0.8.0-Beryllium</version>
                             <type>jar</type>
                         </dependency>
                     </dependencies>
