--- a/model/ietf/ietf-network/pom.xml
+++ b/model/ietf/ietf-network/pom.xml
@@ -12,10 +12,10 @@
   <parent>
       <groupId>org.opendaylight.mdsal.model</groupId>
       <artifactId>model-ietf</artifactId>
-      <version>0.8.0-SNAPSHOT</version>
+      <version>0.8.0-Beryllium</version>
   </parent>
   <artifactId>ietf-network-2015-06-08</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0-Beryllium</version>
   <packaging>bundle</packaging>
   <modelVersion>4.0.0</modelVersion>
   <name>${project.artifactId}</name>
@@ -26,7 +26,7 @@
       <dependency>
         <groupId>org.opendaylight.mdsal.model</groupId>
         <artifactId>mdsal-model-artifacts</artifactId>
-        <version>0.8.0-SNAPSHOT</version>
+        <version>0.8.0-Beryllium</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
