--- a/binding/mdsal-binding-java-api-generator/pom.xml
+++ b/binding/mdsal-binding-java-api-generator/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>mdsal-binding</artifactId>
-        <version>0.8.0-Beryllium</version>
+        <version>0.8.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
