--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,7 +13,7 @@
     <parent>
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>mdsal-parent</artifactId>
-      <version>2.0.0-Beryllium</version>
+      <version>2.0.1-SNAPSHOT</version>
       <relativePath>parent</relativePath>
     </parent>
 
