--- a/dom/mdsal-dom-api/pom.xml
+++ b/dom/mdsal-dom-api/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>mdsal-dom</artifactId>
-    <version>2.0.0-Beryllium</version>
+    <version>2.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>mdsal-dom-api</artifactId>
   <packaging>bundle</packaging>
