--- a/model/general-entity/pom.xml
+++ b/model/general-entity/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>model-parent</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.0-Beryllium</version>
+        <version>0.8.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
