Fix wrong groupId
Change-Id: I1d38ba9a8f0fe65d8ec4ead15022f5951e2915a9
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+    <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>mdsal-agreggator</artifactId>
     <name>md-sal</name> <!-- Used by Sonar to set project name -->
     <packaging>pom</packaging>
