--- a/model/ietf/ietf-type-util/pom.xml
+++ b/model/ietf/ietf-type-util/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>yang-binding</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 
   <scm>
