--- a/common/artifacts/pom.xml
+++ b/common/artifacts/pom.xml
@@ -14,13 +14,13 @@
     <parent>
       <groupId>org.opendaylight.odlparent</groupId>
       <artifactId>odlparent-lite</artifactId>
-      <version>1.6.1-SNAPSHOT</version>
+      <version>1.6.1-Beryllium-SR1</version>
       <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>mdsal-artifacts</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1-Beryllium-SR1</version>
     <packaging>pom</packaging>
 
     <dependencyManagement>
@@ -66,37 +66,37 @@
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>maven-sal-api-gen-plugin</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-binding-generator-api</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-binding-generator-util</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-binding-generator-impl</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-binding-java-api-generator</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>yang-binding</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-binding-dom-codec</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
 
             <dependency>
@@ -118,17 +118,17 @@
             <dependency>
                 <groupId>org.opendaylight.mdsal.model</groupId>
                 <artifactId>yang-ext</artifactId>
-                <version>2013.09.07.8.1-SNAPSHOT</version>
+                <version>2013.09.07.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal.model</groupId>
                 <artifactId>general-entity</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-binding-test-model</artifactId>
-                <version>0.8.1-SNAPSHOT</version>
+                <version>0.8.1-Beryllium-SR1</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
