--- a/dom/mdsal-dom-inmemory-datastore/pom.xml
+++ b/dom/mdsal-dom-inmemory-datastore/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>mdsal-dom</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1-Beryllium-SR1</version>
   </parent>
 
   <artifactId>mdsal-dom-inmemory-datastore</artifactId>
