--- a/model/iana/iana-if-type/pom.xml
+++ b/model/iana/iana-if-type/pom.xml
@@ -12,13 +12,13 @@
     <parent>
         <artifactId>model-iana</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.1-SNAPSHOT</version>
+        <version>0.8.1-Beryllium-SR1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>iana-if-type</artifactId>
-    <version>2013.07.04.8.1-SNAPSHOT</version>
+    <version>2013.07.04.8.1-Beryllium-SR1</version>
     <packaging>bundle</packaging>
 
 
