--- a/model/ietf/ietf-topology-l3-unicast-igp/pom.xml
+++ b/model/ietf/ietf-topology-l3-unicast-igp/pom.xml
@@ -13,13 +13,13 @@
     <parent>
         <artifactId>model-ietf</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.1-SNAPSHOT</version>
+        <version>0.8.1-Beryllium-SR1</version>
     </parent>
 
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ietf-topology-l3-unicast-igp</artifactId>
-    <version>2013.10.21.8.1-SNAPSHOT</version>
+    <version>2013.10.21.8.1-Beryllium-SR1</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
