Added initial maven structure for Binding 2
Change-Id: Idd72303babb3ddad5c64b18c574556dec7e73859
Signed-off-by: Tony Tkacik <ttkacik@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
       <module>common</module>
       <module>dom</module>
       <module>binding</module>
+      <module>binding2</module>
       <module>model</module>
     </modules>
 
