--- a/binding/mdsal-binding-util/pom.xml
+++ b/binding/mdsal-binding-util/pom.xml
@@ -4,10 +4,10 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>mdsal-binding</artifactId>
-    <version>0.8.2-SNAPSHOT</version>
+    <version>0.8.2-Beryllium-SR2</version>
   </parent>
   <artifactId>mdsal-binding-util</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.2-Beryllium-SR2</version>
   <packaging>bundle</packaging>
 
   <dependencies>
