--- a/model/iana/iana-if-type-2014-05-08/pom.xml
+++ b/model/iana/iana-if-type-2014-05-08/pom.xml
@@ -12,12 +12,12 @@
     <parent>
         <artifactId>model-iana</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.2-SNAPSHOT</version>
+        <version>0.8.2-Beryllium-SR2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>iana-if-type-2014-05-08</artifactId>
-    <version>2014.05.08.8.2-SNAPSHOT</version>
+    <version>2014.05.08.8.2-Beryllium-SR2</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
