--- a/model/ietf/ietf-type-util/pom.xml
+++ b/model/ietf/ietf-type-util/pom.xml
@@ -4,10 +4,10 @@
   <parent>
     <groupId>org.opendaylight.mdsal.model</groupId>
     <artifactId>model-ietf</artifactId>
-    <version>0.8.2-SNAPSHOT</version>
+    <version>0.8.2-Beryllium-SR2</version>
   </parent>
   <artifactId>ietf-type-util</artifactId>
-  <version>0.8.2-SNAPSHOT</version>
+  <version>0.8.2-Beryllium-SR2</version>
   <packaging>bundle</packaging>
 
   <dependencies>
