--- a/model/l2-types/pom.xml
+++ b/model/l2-types/pom.xml
@@ -12,13 +12,13 @@
     <parent>
         <artifactId>model-parent</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.2-SNAPSHOT</version>
+        <version>0.8.2-Beryllium-SR2</version>
     </parent>
 
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>opendaylight-l2-types</artifactId>
-    <version>2013.08.27.8.2-SNAPSHOT</version>
+    <version>2013.08.27.8.2-Beryllium-SR2</version>
     <packaging>bundle</packaging>
 
 
