--- a/binding/maven-sal-api-gen-plugin/pom.xml
+++ b/binding/maven-sal-api-gen-plugin/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>mdsal-binding</artifactId>
-        <version>0.8.2-Beryllium-SR2</version>
+        <version>0.8.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>maven-sal-api-gen-plugin</artifactId>
