--- a/dom/mdsal-artifacts/pom.xml
+++ b/dom/mdsal-artifacts/pom.xml
@@ -14,13 +14,13 @@
     <parent>
       <groupId>org.opendaylight.odlparent</groupId>
       <artifactId>odlparent-lite</artifactId>
-      <version>1.6.2-Beryllium-SR2</version>
+      <version>1.6.3-SNAPSHOT</version>
       <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.controller</groupId>
     <artifactId>mdsal-artifacts</artifactId>
-    <version>1.3.2-Beryllium-SR2</version>
+    <version>1.3.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <dependencyManagement>
