--- a/model/ietf/ietf-inet-types-2013-07-15/pom.xml
+++ b/model/ietf/ietf-inet-types-2013-07-15/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <artifactId>model-ietf</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.2-Beryllium-SR2</version>
+        <version>0.8.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ietf-inet-types-2013-07-15</artifactId>
-    <version>1.0.2-Beryllium-SR2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
