--- a/model/ietf/ietf-inet-types/pom.xml
+++ b/model/ietf/ietf-inet-types/pom.xml
@@ -12,12 +12,12 @@
     <parent>
         <artifactId>model-ietf</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.2-Beryllium-SR2</version>
+        <version>0.8.3-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ietf-inet-types</artifactId>
-    <version>2010.09.24.8.2-Beryllium-SR2</version>
+    <version>2010.09.24.8.3-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
