--- a/model/ietf/ietf-restconf/pom.xml
+++ b/model/ietf/ietf-restconf/pom.xml
@@ -13,13 +13,13 @@
     <parent>
         <artifactId>model-ietf</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.2-Beryllium-SR2</version>
+        <version>0.8.3-SNAPSHOT</version>
     </parent>
 
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ietf-restconf</artifactId>
-    <version>2013.10.19.8.2-Beryllium-SR2</version>
+    <version>2013.10.19.8.3-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
