--- a/model/ietf/ietf-yang-types-20130715/pom.xml
+++ b/model/ietf/ietf-yang-types-20130715/pom.xml
@@ -13,12 +13,12 @@
     <parent>
         <artifactId>model-ietf</artifactId>
         <groupId>org.opendaylight.mdsal.model</groupId>
-        <version>0.8.2-Beryllium-SR2</version>
+        <version>0.8.3-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ietf-yang-types-20130715</artifactId>
-    <version>2013.07.15.8.2-Beryllium-SR2</version>
+    <version>2013.07.15.8.3-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>bundle</packaging>
