Bug 8326 - Split out OsgiBundleScanningSchemaService
 * move osgi part of mdsal-dom broker to new module
   mdsal-dom-schema-service-osgi (with unit tests)

Change-Id: I2eb2e4f96f50456f84982e5de6d439b0306bcc0f
Signed-off-by: Jakub Toth <jakub.toth@pantheon.tech>

--- a/common/features/odl-mdsal-dom-broker/pom.xml
+++ b/common/features/odl-mdsal-dom-broker/pom.xml
@@ -74,6 +74,13 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>mdsal-dom-broker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>odl-mdsal-dom-schema-service-osgi</artifactId>
+            <version>${project.version}</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
     </dependencies>
 
     <!--
