--- a/common/features/features-mdsal/pom.xml
+++ b/common/features/features-mdsal/pom.xml
@@ -125,6 +125,12 @@
             <classifier>features</classifier>
             <type>xml</type>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>odl-mdsal-dom-schema-service-osgi</artifactId>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
 
         <!-- EOS -->
         <dependency>
