MDSAL Binding 2 Features for Karaf 4
  * odl-mdsal-binding2-api
  * odl-mdsal-binding2-base
  * odl-mdsal-binding2-dom-adapter
  * odl-mdsal-binding2-runtime
  * odl-mdsal-binding2

Change-Id: I7b622cba52bf5833e13bb28fef1a917249544e71
Signed-off-by: Jakub Toth <jakub.toth@pantheon.tech>

--- a/binding2/mdsal-binding2-spec/pom.xml
+++ b/binding2/mdsal-binding2-spec/pom.xml
@@ -69,6 +69,25 @@
         </dependency>
     </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Bundle-Name>Java Binding for YANG</Bundle-Name>
+            <Import-Package>
+              *,
+              com.google.common.base
+            </Import-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <!--
       Maven Site Configuration
 
