--- a/common/features/odl-mdsal-binding2-api/pom.xml
+++ b/common/features/odl-mdsal-binding2-api/pom.xml
@@ -37,7 +37,7 @@
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yangtools-artifacts</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>1.2.0</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
