--- a/common/parent/pom.xml
+++ b/common/parent/pom.xml
@@ -24,7 +24,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <yangtools.version>2.0.0-SNAPSHOT</yangtools.version>
+        <yangtools.version>1.2.0</yangtools.version>
         <salGeneratorPath>${project.build.directory}/generated-sources/sal</salGeneratorPath>
 
         <!-- FIXME: these will be upstreamed -->
@@ -50,7 +50,7 @@
             <dependency>
                  <groupId>org.opendaylight.yangtools</groupId>
                  <artifactId>yangtools-artifacts</artifactId>
-                 <version>2.0.0-SNAPSHOT</version>
+                 <version>1.2.0</version>
                  <type>pom</type>
                  <scope>import</scope>
             </dependency>
@@ -105,7 +105,7 @@
                 <plugin>
                     <groupId>org.opendaylight.yangtools</groupId>
                     <artifactId>yang-maven-plugin</artifactId>
-                    <version>2.0.0-SNAPSHOT</version>
+                    <version>1.2.0</version>
                     <executions>
                         <execution>
                             <goals>
