Binding v2 Generator - fix dependency yang-ext of mdsal-binding2-test-model
- It should depend on yang-ext in binding2 model for
using generated codes v2.

Change-Id: I3c5b597285b3ca67c376184b2b080745776c2d94
Signed-off-by: Jie Han <han.jie@zte.com.cn>

--- a/binding2/mdsal-binding2-test-model/pom.xml
+++ b/binding2/mdsal-binding2-test-model/pom.xml
@@ -27,7 +27,7 @@
             <artifactId>mdsal-binding2-spec</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal.model</groupId>
+            <groupId>org.opendaylight.mdsal.model.binding2</groupId>
             <artifactId>yang-ext</artifactId>
             <exclusions>
                 <exclusion>
